--- a/informe.tex
+++ b/informe.tex
@@ -12,13 +12,13 @@
 
 \title{Metodologia RUP}
 \author{Christian López \\ Thomas Muñoz \\ Flavio Pallini}
-\email{christian.lopeza@mail.udp.cl }
+\email{christian.lopeza@mail.udp.cl \\ thomas.munoz@mail.udp.cl }
 \date{29 de agosto de 2017}
 
 % Además podemos establecer la facultad y escuela
 % los valores por defecto son los siguientes:
 \udpschool{Escuela de Informática y Telecomunicaciones}
-\udpfaculty{Facultad de Ingeniería}
+\udpfaculty{Facultad de Ingeniería y Ciencias}
 \udpuniversity{Universidad Diego Portales}
 
 \begin{document}
@@ -26,46 +26,39 @@
 
 \tableofcontents
 \listoffigures
-%\begin{figure}
-%\centering
-%\includegraphics[width=0.5\textwidth]{name_image.jpg}
-%\caption{\label{fig:name}This is a figure caption.}
-%\end{figure}
 
 \chapter{Introducción}
+Hoy en día es casi imposible realizar un proyecto de software sin hacer uso de alguna metodología, ya que estos requieren de un manejo de muchas variables, métodos y procesos. Es por esto que para satisfacer estas necesidades se hace uso de la ingeniería de software como pauta a seguir cuando se quiere modelar la solución a un problema de software en una empresa.\par
+La metodología RUP, es un proceso de desarrollo de software creado por \textit{Rational Software}, y actualmente propiedad de IBM, obteniendo el nombre de \textit{Rational Unified Process}.\par
+Es uno de los métodos de desarrollo de software más utilizados para el análisis, implementación y documentación de sistemas orientados a objetos. Se caracteriza por no ser estático, ya que está compuesto por un conjunto de fases adaptables según la necesidad del cliente o avance del equipo de desarrollo.
 
+\chapter{Explicación de Metodología}
+Esta metodología permite dividir el proceso de desarrollo en cuatro grandes fases donde cada una incluye modelamiento del negocio, análisis, diseño, construcción, pruebas e implantación.
 
-
-\chapter{Explicación de Metodologia}
-
-La metodologia RUP, es un proceso propietario por ingenieria de software creado por \textit{Rational Sowftware}, y actualmente propiedad de IBM, obteniendo el nombre de \textit{Rational Unified Process}, proporcionando tecnicas que deben seguir los miembro del equipo  de desarrolo de software. \par
-
-Utiliza un enfoque de la orientacion a objecto en su diseño y documentado el uso de la notacion UML(\textit{Unified Modeling Languaje}) para ilustrar los procesos en acción. \par
-
-\section{Por que utilizar RUP?}
+\section{¿Por qué utilizar RUP?}
 \label{sec: Por que utilizar RUP}
-RUP  le proporciona información sobre lo que puede esperarse de la tarea de desarrollo.Le ofrece un glosario de terminología y una enciclopedia de conocimiento que le ayuda a comunicar sus necesidades de formca eficaz al equipo de  desarrollo de software. \par
-Para un gestór o jefe de equipo, RUP le proporciona  un proceso  el cual le permite comunicarse de forma eficaz con el personal y gestionar la planificación y el control de su trabajo. Para un Ingeniero en proceso, RUP le proporciona una buena base de arquitectura y una gran cantidad de materiales con las que construir una definicion de un proceso, lo que le permite configurar y ampliar dicha base como desee.
+RUP proporciona información sobre lo que puede esperarse de la tarea de desarrollo. Ofrece un glosario de terminología y una enciclopedia de conocimiento que le ayuda a comunicar sus necesidades de forma eficaz al equipo de  desarrollo de software. \par
+Para un gestor o jefe de equipo, RUP proporciona  un proceso el cual le permite comunicarse de forma eficaz con el personal, gestionar la planificación y el control de su trabajo. Para un Diseñador, RUP proporciona una buena base de arquitectura y una gran cantidad de materiales con las que construir una definición de un proceso, lo que le permite configurar y ampliar dicha base como desee.
 
-\section{Cuando debo utilizar RUP?}
+\section{¿Cuándo debo utilizar RUP?}
 \label{sec: Cuando debo utilizar RUP}
-Se utiliza RUP desde el inicio de  un proyecyo de software, y puede seguir utilizándolo en los ciclos de desarrollo subsiguientes tiempo después de que le proyecto inicial haya terminado. \par
+Se utiliza RUP desde el inicio de  un proyecto de software, y puede seguir utilizándolo en los ciclos de desarrollo subsiguientes tiempo después de que le proyecto inicial haya terminado. \par
 La forma de utilizar RUP varía para ajustarse a sus necesidades. Existen unas pocas consideraciones que determinarán cuando y como utilizar partes diferentes de RUP.
 \begin{itemize}
 \item Ciclo vital del proyecto(numero de iteraciones, longitud de cada fase)
 \item Propósitos empresariales, visión, ámbito y riesgo del proyecto
 \item Tamaño del esfuerzo de desarrollo de software
 \end{itemize}
-En la siguiente figura \ref{fig:grafico} muestra atraves de un grafico de complejidad de tecnica y gestion:
+En la siguiente figura \ref{fig:grafico} muestra a través de un gráfico de complejidad de técnica y gestión:
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.7\textwidth]{RUP.png}
-	\caption{\label{fig:grafico}Grafico complejidad de tecnica y gestion.}
+	\caption{\label{fig:grafico}Gráfico complejidad de técnica y gestión.}
 \end{figure}
 
-\section{Fases de la metodologia RUP}
-Las fases indican el énfasis que se da en el proyecto en un instante dado. Para capturar la dimension temporal de un proyecto, RUP divide el proyecto en cuatro fases diferentes(ver figura \ref{fig:fases}):
+\section{Fases de la metodología RUP}
+Las fases indican el énfasis que se da en el proyecto en un instante dado. Para capturar la dimensión temporal de un proyecto, RUP divide el proyecto en cuatro fases diferentes(ver figura \ref{fig:fases}):
 
 \begin{figure}[!h]
 	\centering
@@ -77,16 +70,16 @@ Las fases indican el énfasis que se da en el proyecto en un instante dado. Para
 \item Iniciación o Diseño: énfasis en el alcance del sistema
 \item Preparación: énfasis en la arquitectura
 \item Construcción: énfasis en el desarrollo
-\item Transición: énfasis en la aplicacion
+\item Transición: énfasis en la aplicación
 
 \end{itemize}
 
 \subsection{Fase de Inicio}
 
 
-\chapter{Aplicacion en Canchapp}
+\chapter{Aplicación en Canchapp}
 
-\chapter{Conclusion}
+\chapter{Conclusión}
 
 
 %\listoftables
