--- a/informe.tex
+++ b/informe.tex
@@ -75,7 +75,25 @@ Las fases indican el énfasis que se da en el proyecto en un instante dado. Para
 \end{itemize}
 
 \subsection{Fase de Inicio}
+\label{subsec:inicio}
+El objetivo preferente de esta fase es alcanzar un acuerdo entre todos los interesados respecto a los objetivos del ciclo vital del proyecto.
+Es muy significativa la fase de inicio, pues son más arriesgados para los requisitos y para la actividad comercial y deben abordarse antes de que el proyecto pueda continuar.\par
+La duracion de esto es generalmente corto y se utiliza para definir si es factible seguir y definir los riesgos. Un prototipo se puede hacer para que el cliente pruebe el software.\par
 
+
+\subsection{Fase de elaboracion}
+\label{subsec:elaboracion}
+El proposito de esta fase es el establecimiento de una arquitectura de sistema para proporcionar una base estable para el diseño y la implementación en la fase de construccion. La arquitetura va evolucionando  a partir de una consideracion de requisitos mas significativos y  una valoracion a los riesgos.\par
+Al final de la fase de elaboración se encuentra el segundo objectivo mas importante del proyecto que es el ciclo vital de la arquitectura. En esta se examina los objectivos y el ámbito del sistema detallado, la eleccion de arquitectura y la resolucion a los principales riesgos.
+
+\subsection{Fase de Construcción}
+\label{subsec:construccion}
+El objectivo de la fase de construccion es aclarar lo requisitos restantes y completar el desarrolo del sistema basandose en la base de la arquitectura.
+En esta fase sespone el énfasis en la gestion de los recursos y el control de la operaciones para poder optimizar los costes, la planificacion y la calidad.\par
+
+\subsection{Fase de Transición}
+En esta fase se garantiza que el software este diponicle para los usuarios finales, ademas se puede acarrear varias iteraciones e incluye las pruebas del producto en preparación para el release, asi como los ajustes menores basados en la informacion obtenida de los usuarios que han probado el software.\par
+En este momento del ciclo vital, la informacion recibida de los usuarios debe centrarse especialmente en el ajuste del producto, las cuestiones de configuracion, instalacion y utilización.
 
 \chapter{Aplicación en Canchapp}
 
