--- a/informe.tex
+++ b/informe.tex
@@ -28,11 +28,12 @@
 \listoffigures
 
 \chapter{Introducción}
-Hoy en día es casi imposible realizar un proyecto de software sin hacer uso de alguna metodología, ya que estos requieren de un manejo de muchas variables, métodos y procesos. Es por esto que para satisfacer estas necesidades se hace uso de la ingeniería de software como pauta a seguir cuando se quiere modelar la solución a un problema de software en una empresa.\par
-La metodología RUP, es un proceso de desarrollo de software creado por \textit{Rational Software}, y actualmente propiedad de IBM, obteniendo el nombre de \textit{Rational Unified Process}.\par
-Es uno de los métodos de desarrollo de software más utilizados para el análisis, implementación y documentación de sistemas orientados a objetos. Se caracteriza por no ser estático, ya que está compuesto por un conjunto de fases adaptables según la necesidad del cliente o avance del equipo de desarrollo.
+Según la IEEE, "la ingeniería de software es la aplicación de un enfoque sistemático, disciplinado y cuantificable al desarrollo, operación, y mantenimiento del software." Bajo este concepto, si bien es posible construir software sin seguir un protocolo para la planificación de su desarrollo, resulta mucho más conveniente y seguro utilizar alguna metodología aplicada de la ingeniería como pauta a seguir, a fin de modelar la solución a un problema en una empresa que pueda ser resuelto con la implementación o mejora de un nuevo software. De esta forma se gestionan múltiples variables y procesos esperados de forma más eficiente y con un riesgo de error menor. \par
+Por lo general, las metodologías de trabajo se basan en un conocimiento de las necesidades a suplir por el proyecto, la determinación de su alcance, su construcción, y su evaluación como respuesta al problema original. Dependiendo de la metodología usada, estas etapas pueden sucederse de forma lineal, cíclica, en ese mismo o distinto orden, dependiendo de lo que el proyecto amerite. Así, en este informe, se detallará la metodología RUP, o \textit{Rational Unified Process}.
+% Hoy en día es casi imposible realizar un proyecto de software sin hacer uso de alguna metodología, ya que estos requieren de un manejo de muchas variables, métodos y procesos. Es por esto que para satisfacer estas necesidades se hace uso de la ingeniería de software como pauta a seguir cuando se quiere modelar la solución a un problema de software en una empresa.\par
 
 \chapter{Explicación de Metodología}
+La metodología RUP es un proceso de desarrollo de software creado por \textit{Rational Software}, y actualmente propiedad de IBM. Es una de las metodologías de desarrollo de software más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. Se caracteriza por no ser estática, sino compuesta por un conjunto de fases adaptables según la necesidad del cliente o avance del equipo de desarrollo.\par
 Esta metodología permite dividir el proceso de desarrollo en cuatro grandes fases donde cada una incluye modelamiento del negocio, análisis, diseño, construcción, pruebas e implantación.
 
 \section{¿Por qué utilizar RUP?}
