--- a/informe.tex
+++ b/informe.tex
@@ -34,7 +34,7 @@ Por lo general, las metodologías de trabajo se basan en un conocimiento de las 
 
 \chapter{Explicación de Metodología}
 La metodología RUP es un proceso de desarrollo de software creado por \textit{Rational Software}, y actualmente propiedad de IBM. Es una de las metodologías de desarrollo de software más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. Se caracteriza por no ser estática, sino compuesta por un conjunto de fases adaptables según la necesidad del cliente o avance del equipo de desarrollo.\par
-Esta metodología trabaja con iteraciones, haciendo a RUP una forma de desarrollo en espiral. Cada iteración incluye los roles que se van a ver involucrados, las labores que se van a realizar, y el subproducto que van a producir. Sin embargo, estas iteraciones se diseñan tal que puedan dividir el proceso de desarrollo en cuatro grandes fases, donde cada una incluye en mayor o menor medida el modelamiento del negocio, análisis, diseño, construcción, pruebas e implantación. Lo que esto permite es un desarrollo maleable donde nuevos desafíos o requerimientos pueden ser adheridos al proyecto, y donde el producto final necesariamente debe haber sido compuesto por, y probado como, componentes interdependientes, lo cual permite probar más de cerca la calidad del código.
+RUP es una forma de UP (textit{Unified Process}), una metodología caracterizada por la planificación basada en arquitectura y casos de uso. Esta metodología trabaja con iteraciones, haciendo a RUP una forma de desarrollo incremental. Cada iteración incluye los roles que se van a ver involucrados, las labores que se van a realizar, el componente o producto que van a producir, y un ligero análisis del riesgo involucrado. Sin embargo, estas iteraciones se diseñan tal que puedan dividir el proceso de desarrollo en cuatro grandes fases, donde cada una incluye en mayor o menor medida el modelamiento del negocio, análisis, diseño, construcción, pruebas e implantación. Lo que esto permite es un desarrollo maleable donde nuevos desafíos o requerimientos pueden ser adheridos al proyecto, y donde el producto final necesariamente debe haber sido compuesto por, y probado como, componentes interdependientes, lo cual permite probar más de cerca la calidad del código.
 
 \section{¿Por qué utilizar RUP?}
 \label{sec: Por que utilizar RUP}
@@ -59,7 +59,7 @@ En la siguiente figura \ref{fig:grafico} muestra a través de un gráfico de com
 \end{figure}
 
 \section{Fases de la metodología RUP}
-Las fases indican el énfasis que se da en el proyecto en un instante dado. Para capturar la dimensión temporal de un proyecto, RUP divide el proyecto en cuatro fases diferentes(ver figura \ref{fig:fases}):
+Las fases indican el énfasis que se da a atributos particulares en el proyecto en un instante dado. Para capturar la dimensión temporal de un proyecto, RUP divide el proyecto en cuatro fases diferentes(ver figura \ref{fig:fases}):
 
 \begin{figure}[!h]
 	\centering
@@ -98,8 +98,9 @@ En este momento del ciclo vital, la informacion recibida de los usuarios debe ce
 
 \section{Desventajas de RUP}
 Siendo una metodología iterativa donde cada iteración tiene un grado significativo de independencia, las principales desventajas de RUP tienen que ver con la integración de todas las iteraciones en un proyecto coherente. En particular, se debe poner atención especial en compatibilizar los procesos y tecnologías de cada componente entre sí. Asimismo, si bien es conveniente evaluar la calidad de los componentes por separado, no se puede obviar el control de calidad del producto completo, gracias al problema de compatibilización ya mencionado.
-Dependiendo de la granularidad de las iteraciones contra el alcance del proyecto, trabajar con RUP puede ser más desorganizado que otras metodologías. Si bien son claras las fases de RUP y éstas otorgan un nivel de orden, existen varios proyectos que no se pueden subdividir tan óptimamente. Similarmente, esto puede llevar a una construcción más difícil que con otras metodologías.
-Finalmente, y como detalle final, dividir el trabajo de esta forma puede complejizar la documentación.
+Dependiendo de la granularidad de las iteraciones contra el alcance del proyecto, trabajar con RUP puede ser más desorganizado que otras metodologías. Si bien son claras las fases de RUP y éstas otorgan un nivel de orden similar a la de métodos secuenciales, existen varios proyectos que no se pueden subdividir tan óptimamente, alterando la organización. Similarmente, esto puede llevar a una construcción más difícil que con otras metodologías.
+Además, si bien RUP divide el proyecto final en componentes, estos componentes no son de ninguna forma un producto finalizado presentable. Esto puede causar fricción con el cliente del proyecto, 
+Finalmente, y como detalle final, dividir el trabajo de esta forma puede complejizar la documentación, en especial existiendo tantos documentos y artefactos comunes en RUP a usarse en la planificación del proyecto.
 
 \chapter{Aplicación en Canchapp}
 
