--- a/informe.tex
+++ b/informe.tex
@@ -97,12 +97,19 @@ En esta fase se garantiza que el software este diponible para los usuarios final
 En este momento del ciclo vital, la informacion recibida de los usuarios debe centrarse especialmente en el ajuste del producto, las cuestiones de configuracion, instalacion y utilización.
 
 \section{Desventajas de RUP}
-Siendo una metodología iterativa donde cada iteración tiene un grado significativo de independencia, las principales desventajas de RUP tienen que ver con la integración de todas las iteraciones en un proyecto coherente. En particular, se debe poner atención especial en compatibilizar los procesos y tecnologías de cada componente entre sí. Asimismo, si bien es conveniente evaluar la calidad de los componentes por separado, no se puede obviar el control de calidad del producto completo, gracias al problema de compatibilización ya mencionado.
-Dependiendo de la granularidad de las iteraciones contra el alcance del proyecto, trabajar con RUP puede ser más desorganizado que otras metodologías. Si bien son claras las fases de RUP y éstas otorgan un nivel de orden similar a la de métodos secuenciales, existen varios proyectos que no se pueden subdividir tan óptimamente, alterando la organización. Similarmente, esto puede llevar a una construcción más difícil que con otras metodologías.
-Además, si bien RUP divide el proyecto final en componentes, estos componentes no son de ninguna forma un producto finalizado presentable. Esto puede causar fricción con el cliente del proyecto, 
+Siendo una metodología iterativa donde cada iteración tiene un grado significativo de independencia, las principales desventajas de RUP tienen que ver con la integración de todas las iteraciones en un proyecto coherente. En particular, se debe poner atención especial en compatibilizar los procesos y tecnologías de cada componente entre sí. Asimismo, si bien es conveniente evaluar la calidad de los componentes por separado, no se puede obviar el control de calidad del producto completo, gracias al problema de compatibilización ya mencionado.\par
+Dependiendo de la granularidad de las iteraciones contra el alcance del proyecto, trabajar con RUP puede ser más desorganizado que otras metodologías. Si bien son claras las fases de RUP y éstas otorgan un nivel de orden similar a la de métodos secuenciales, existen varios proyectos que no se pueden subdividir tan óptimamente, alterando la organización. Similarmente, esto puede llevar a una construcción más difícil que con otras metodologías.\par
+Además, si bien RUP divide el proyecto final en componentes, estos componentes no son de ninguna forma un producto finalizado presentable. Esto puede causar fricción con el cliente del proyecto, de la misma forma que las metodologías como Cascada pueden causar fricción. La falta de productos tangibles que presentar, o productos tangibles que no representan la realidad final del proyecto, puede ser problemática.\par
 Finalmente, y como detalle final, dividir el trabajo de esta forma puede complejizar la documentación, en especial existiendo tantos documentos y artefactos comunes en RUP a usarse en la planificación del proyecto.
 
 \chapter{Aplicación en Canchapp}
+Cada iteración de RUP considera metas, roles, y componentes definidos, con documentación y artefactos usualmente especificos. Para no realizar todo el trabajo exhaustivo que esto conllevaría, se presenta un bosquejo de lo que podría realizarse en éstas.\par
+La primera iteración sería parte de la fase de iniciación. Se buscaría especificar requisitos generales e, importantemente, esbozar un plan para el trabajo siguiente en general. En el caso de Canchapp, esto podría traducirse en identificar que se va a necesitar información de mapas y GPS e información de contacto a canchas que dispongan de ésta; definir qué funcionalidades son más primordiales, tales como la implementación de formas de conexión de personas por medio de (o ligada a) la aplicación, una base de datos que registre qué canchas están en uso qué días, y si existe una forma de reservarlas. Se incluiría además un análisis del riesgo y de la prioridad de estas características.\par
+Lo documentado en esta iteración se discutiría con los textit{stakeholders}, y de ser necesario se incorporarían una o más iteraciones en esta fase a fin de pulir la imagen inicial que se espera para Canchapp. Para el caso de estudio, se considerará una segunda iteración.\par
+Luego, comenzaría la fase de elaboración. Ahora ya comenzaría en más detalle la definición de casos de uso y, por medio de UML, la documentación de la arquitectura que se espera que la aplicación contenga. Es en estas iteraciones que se especificaría qué datos de las canchas y usuarios es pertinente almacenar en bases de datos en internet, la pertinencia de trabajar o no con perfiles de usuario, o cuántas facultades se les otorgaría a los usuarios para manipular estos datos -esto es, si se les permite un grado de gestión sobre las canchas (tal como sugerir dónde hay canchas no documentadas) o si su participación se limitaría a consumir. Se debe considerar además especificaciones estéticas como el diseño de la interfaz gráfica, si una implementación minimalista o detallista, y de qué forma hacer la aplicación más intuitiva. Habiendo dado como ejemplo tres funcionalidades a definir, una de las cuales puede influir a otra, se considerarán dos iteraciones para esta fase.\par
+A continuación, vendría la fase de desarrollo. De forma general, se trataría de seguir el plan definido dos fases atrás con la prioridad mencionada. Considerando una iteración por cada una de las funcionalidades mencionadas (teniendo en mente que seguro existen varias funcionalidades necesarias no mencionadas), una más para control de calidad de detalle y una más por algun requerimiento que pudiera surgir y evaluarse en el desarrollo de la aplicación, se podrían considerar seis iteraciones para esta fase.\par
+Finalmente, en la fase de transición se ensamblarían los componentes desarrollados en la fase anterior, y se realizarían pruebas generales de control de calidad, terminando de pulir el producto. Para esto se puede, optimistamente, esperar una única iteración necesaria. Además, siendo este un emprendimiento más que un producto interno de una empresa, se realizarían campañas publicitarias y de inserción en tienda, lo cual requeriría la atención de un último ciclo. \par
+Con esto se considerarían en total doce iteraciones, de las cuales la fase de desarrollo sería notablemente la más amplia. En el ejemplo, las tres otras fases tenían largos similares, y en todos los diagramas estudiados este parecía ser el caso real.
 
 \chapter{Conclusión}
 
