--- a/informe.tex
+++ b/informe.tex
@@ -6,12 +6,13 @@
 \usepackage{multirow}
 \usepackage{verbatim} 
 \usepackage{upgreek} 
+\usepackage{float}
 
 % Podemos establecer el logo de alguna entidad o dejar el de la UDP (defecto)
 \setlogo{EITFI}
 
 \title{Metodologia RUP}
-\author{Christian López \\ Thomas Muñoz \\ Flavio Pallini}
+\author{Christian López \\ Thomas Muñoz \\ Flavio Pallini}
 \email{christian.lopeza@mail.udp.cl \\ thomas.munoz@mail.udp.cl \\ flavio.pallini@mail.udp.cl}
 \date{29 de agosto de 2017}
 
@@ -52,7 +53,7 @@ La forma de utilizar RUP varía para ajustarse a sus necesidades. Existen unas p
 \end{itemize}
 En la siguiente figura \ref{fig:grafico} muestra a través de un gráfico de complejidad de técnica y gestión:
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{RUP.png}
 	\caption{\label{fig:grafico}Gráfico complejidad de técnica y gestión.}
@@ -63,7 +64,7 @@ Las fases indican el énfasis que se da a atributos particulares en el proyecto 
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.8\textwidth]{fases.png}
+	\includegraphics[width=0.7\textwidth]{fases.png}
 	\caption{\label{fig:fases}Fases de RUP.}
 \end{figure}
 
@@ -82,40 +83,39 @@ Es muy significativa la fase de inicio, pues son más arriesgados para los requi
 La duracion de esto es generalmente corto y se utiliza para definir si es factible seguir y definir los riesgos. Un prototipo se puede hacer para que el cliente pruebe el software.\par
 
 
-\subsection{Fase de elaboracion}
+\subsection{Fase de elaboración}
 \label{subsec:elaboracion}
-El proposito de esta fase es el establecimiento de una arquitectura de sistema para proporcionar una base estable para el diseño y la implementación en la fase de construccion. La arquitetura va evolucionando  a partir de una consideracion de requisitos mas significativos y  una valoracion a los riesgos.\par
-Al final de la fase de elaboración se encuentra el segundo objectivo mas importante del proyecto que es el ciclo vital de la arquitectura. En esta se examina los objectivos y el ámbito del sistema detallado, la eleccion de arquitectura y la resolucion a los principales riesgos.
+El propósito de esta fase es el establecimiento de una arquitectura de sistema para proporcionar una base estable para el diseño y la implementación en la fase de construcción. La arquitetura va evolucionando  a partir de una consideración de requisitos mas significativos y  una valoración a los riesgos.\par
+Al final de la fase de elaboración se encuentra el segundo objetivo mas importante del proyecto que es el ciclo vital de la arquitectura. En esta se examina los objetivos y el ámbito del sistema detallado, la elección de arquitectura y la resolución a los principales riesgos.
 
 \subsection{Fase de Construcción}
 \label{subsec:construccion}
-El objectivo de la fase de construccion es aclarar lo requisitos restantes y completar el desarrolo del sistema basandose en la base de la arquitectura.
-En esta fase sespone el énfasis en la gestion de los recursos y el control de la operaciones para poder optimizar los costes, la planificacion y la calidad.\par
+El objetivo de la fase de construcción es aclarar lo requisitos restantes y completar el desarrollo del sistema basándose en la base de la arquitectura.
+En esta fase se pone el énfasis en la gestión de los recursos y el control de la operaciones para poder optimizar los costes, la planificación y la calidad.\par
 
 \subsection{Fase de Transición}
-En esta fase se garantiza que el software este diponible para los usuarios finales, ademas se puede acarrear varias iteraciones e incluye las pruebas del producto en preparación para el release, asi como los ajustes menores basados en la informacion obtenida de los usuarios que han probado el software.\par
-En este momento del ciclo vital, la informacion recibida de los usuarios debe centrarse especialmente en el ajuste del producto, las cuestiones de configuracion, instalacion y utilización.
+En esta fase se garantiza que el software este disponible para los usuarios finales, además se puede acarrear varias iteraciones e incluye las pruebas del producto en preparación para el release, asi como los ajustes menores basados en la información obtenida de los usuarios que han probado el software.\par
+En este momento del ciclo vital, la información recibida de los usuarios debe centrarse especialmente en el ajuste del producto, las cuestiones de configuración, instalación y utilización.
 
 \section{Desventajas de RUP}
-Siendo una metodología iterativa donde cada iteración tiene un grado significativo de independencia, las principales desventajas de RUP tienen que ver con la integración de todas las iteraciones en un proyecto coherente. En particular, se debe poner atención especial en compatibilizar los procesos y tecnologías de cada componente entre sí. Asimismo, si bien es conveniente evaluar la calidad de los componentes por separado, no se puede obviar el control de calidad del producto completo, gracias al problema de compatibilización ya mencionado.\par
+Siendo una metodología iterativa donde cada iteración tiene un grado significativo de independencia, las principales desventajas de RUP tienen que ver con la integración de todas las iteraciones en un proyecto coherente. En particular, se debe poner atención especial en compatibilizar los procesos y tecnologías de cada componente entre sí. Asimismo, si bien es conveniente evaluar la calidad de los componentes por separado, no se puede obviar el control de calidad del producto completo, gracias al problema de compatibilidad ya mencionado.\par
 Dependiendo de la granularidad de las iteraciones contra el alcance del proyecto, trabajar con RUP puede ser más desorganizado que otras metodologías. Si bien son claras las fases de RUP y éstas otorgan un nivel de orden similar a la de métodos secuenciales, existen varios proyectos que no se pueden subdividir tan óptimamente, alterando la organización. Similarmente, esto puede llevar a una construcción más difícil que con otras metodologías.\par
 Además, si bien RUP divide el proyecto final en componentes, estos componentes no son de ninguna forma un producto finalizado presentable. Esto puede causar fricción con el cliente del proyecto, de la misma forma que las metodologías como Cascada pueden causar fricción. La falta de productos tangibles que presentar, o productos tangibles que no representan la realidad final del proyecto, puede ser problemática.\par
-Finalmente, y como detalle final, dividir el trabajo de esta forma puede complejizar la documentación, en especial existiendo tantos documentos y artefactos comunes en RUP a usarse en la planificación del proyecto.
+Finalmente, dividir el trabajo de esta forma puede volver mas compleja la documentación, en especial existiendo tantos documentos y artefactos comunes en RUP a usarse en la planificación del proyecto.
 
 \chapter{Aplicación en Canchapp}
-Cada iteración de RUP considera metas, roles, y componentes definidos, con documentación y artefactos usualmente especificos. Para no realizar todo el trabajo exhaustivo que esto conllevaría, se presenta un bosquejo de lo que podría realizarse en éstas.\par
-La primera iteración sería parte de la fase de iniciación. Se buscaría especificar requisitos generales e, importantemente, esbozar un plan para el trabajo siguiente en general. En el caso de Canchapp, esto podría traducirse en identificar que se va a necesitar información de mapas y GPS e información de contacto a canchas que dispongan de ésta; definir qué funcionalidades son más primordiales, tales como la implementación de formas de conexión de personas por medio de (o ligada a) la aplicación, una base de datos que registre qué canchas están en uso qué días, y si existe una forma de reservarlas. Se incluiría además un análisis del riesgo y de la prioridad de estas características.\par
+Cada iteración de RUP considera metas, roles, y componentes definidos, con documentación y artefactos usualmente específicos. Para no realizar todo el trabajo exhaustivo que esto conllevaría, se presenta un bosquejo de lo que podría realizarse en éstas.\par
+La primera iteración sería parte de la fase de iniciación. Se buscaría especificar requisitos generales y, con gran prioridad, esbozar un plan para el trabajo siguiente en general. En el caso de Canchapp, esto podría traducirse en identificar que se va a necesitar información de mapas y GPS e información de contacto a canchas que dispongan de ésta; definir qué funcionalidades son más primordiales, tales como la implementación de formas de conexión de personas por medio de (o ligada a) la aplicación, una base de datos que registre qué canchas están en uso qué días, y si existe una forma de reservarlas. Se incluiría además un análisis del riesgo y de la prioridad de estas características.\par
 Lo documentado en esta iteración se discutiría con los textit{stakeholders}, y de ser necesario se incorporarían una o más iteraciones en esta fase a fin de pulir la imagen inicial que se espera para Canchapp. Para el caso de estudio, se considerará una segunda iteración.\par
 Luego, comenzaría la fase de elaboración. Ahora ya comenzaría en más detalle la definición de casos de uso y, por medio de UML, la documentación de la arquitectura que se espera que la aplicación contenga. Es en estas iteraciones que se especificaría qué datos de las canchas y usuarios es pertinente almacenar en bases de datos en internet, la pertinencia de trabajar o no con perfiles de usuario, o cuántas facultades se les otorgaría a los usuarios para manipular estos datos -esto es, si se les permite un grado de gestión sobre las canchas (tal como sugerir dónde hay canchas no documentadas) o si su participación se limitaría a consumir. Se debe considerar además especificaciones estéticas como el diseño de la interfaz gráfica, si una implementación minimalista o detallista, y de qué forma hacer la aplicación más intuitiva. Habiendo dado como ejemplo tres funcionalidades a definir, una de las cuales puede influir a otra, se considerarán dos iteraciones para esta fase.\par
-A continuación, vendría la fase de desarrollo. De forma general, se trataría de seguir el plan definido dos fases atrás con la prioridad mencionada. Considerando una iteración por cada una de las funcionalidades mencionadas (teniendo en mente que seguro existen varias funcionalidades necesarias no mencionadas), una más para control de calidad de detalle y una más por algun requerimiento que pudiera surgir y evaluarse en el desarrollo de la aplicación, se podrían considerar seis iteraciones para esta fase.\par
-Finalmente, en la fase de transición se ensamblarían los componentes desarrollados en la fase anterior, y se realizarían pruebas generales de control de calidad, terminando de pulir el producto. Para esto se puede, optimistamente, esperar una única iteración necesaria. Además, siendo este un emprendimiento más que un producto interno de una empresa, se realizarían campañas publicitarias y de inserción en tienda, lo cual requeriría la atención de un último ciclo. \par
+A continuación, vendría la fase de desarrollo. De forma general, se trataría de seguir el plan definido dos fases atrás con la prioridad mencionada. Considerando una iteración por cada una de las funcionalidades mencionadas (teniendo en mente que seguro existen varias funcionalidades necesarias no mencionadas), una más para control de calidad de detalle y una más por algún requerimiento que pudiera surgir y evaluarse en el desarrollo de la aplicación, se podrían considerar seis iteraciones para esta fase.\par
+Finalmente, en la fase de transición se ensamblarían los componentes desarrollados en la fase anterior, y se realizarían pruebas generales de control de calidad, terminando de pulir el producto. Para esto se puede, de forma optimista, esperar una única iteración necesaria. Además, siendo este un emprendimiento más que un producto interno de una empresa, se realizarían campañas publicitarias y de inserción en tienda, lo cual requeriría la atención de un último ciclo. \par
 Con esto se considerarían en total doce iteraciones, de las cuales la fase de desarrollo sería notablemente la más amplia. En el ejemplo, las tres otras fases tenían largos similares, y en todos los diagramas estudiados este parecía ser el caso real.
 
 \chapter{Conclusión}
-
+Esta metodología si bien es una potente herramienta para el desarrollo de software, ya que permite darle valor al cliente al hacerlo parte del proceso de desarrollo obteniendo tempranamente el feedback necesario para realizar modificaciones o pasar al siguiente módulo. No es recomendable para proyectos pequeños, ya que los pasos que se deben seguir podrían ser incluso mas tediosos que el proyecto en si y de esta forma provocar que se alargue mucho más de lo necesario.
 
 %\listoftables
 
 
 \end{document}
-
